# whatsapp-bot

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
app/: main.py
